# weather-api

./: README.md  main.py  pyproject.toml
templates/: about.html  home.html  tutorial.html
