[tool.poetry]
name = "weather-api"
version = "0.1.0"
description = ""
authors = ["Łukasz Kuk <lukasz010420@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
